# MiniCPM-Robot

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  README_zh.md
MiniCPM-RobotTrack/: THIRD_PARTY_NOTICES.md  check_go2_camera.py  environment.yml  evaluate.py  go2_runtime.py  go2_runtime.yaml  pyproject.toml  requirements-build.txt  requirements-runtime.txt  train.py
MiniCPM-RobotTrack/docs/: ASSETS.md  ASSETS_zh-CN.md  GO2_DEPLOYMENT.md  GO2_DEPLOYMENT_zh-CN.md  JETPACK6_UPGRADE.md  JETPACK6_UPGRADE_zh-CN.md
MiniCPM-RobotTrack/evt_bench/: __init__.py  additional_action.py  additional_metric.py  additional_sensor.py  humanoid_controller.py  rearrange_sim_v2.py
MiniCPM-RobotTrack/minicpm_robot_track/: __init__.py  checkpoint.py  config.py  data.py  modeling.py  precompute.py  training.py  vision.py  vision_cache.py
MiniCPM-RobotTrack/minicpm_robot_track/evaluation/: __init__.py  policy.py  runner.py  splits.py
MiniCPM-RobotTrack/minicpm_robot_track/hf/: __init__.py  configuration.py  modeling.py
MiniCPM-RobotTrack/realworld/: bench_e2e.py
MiniCPM-RobotTrack/realworld/client/: http_minicpm_robot_track_client.py  thread_utils.py  waypoint_selection.py
MiniCPM-RobotTrack/realworld/sample/: dino_trt_direct.py  http_minicpm_robot_track_server.py  siglip_trt_direct.py  waypoint_controller.py
MiniCPM-RobotTrack/scripts/: build_engines.sh  download_upstream_assets.py  eval_at.sh  eval_dt.sh  eval_stt.sh  export_onnx.sh  preflight.sh  train.sh
MiniCPM-RobotTrack/sim_data/: README.md
MiniCPM-RobotTrack/tools/: make_tracking_data.py  precompute_features.py
(+59 files in other folders)
